<resources>
    <string name="app_name">dv15lgr@cs.umu.se</string>
    <string name="search_mail">Search Mail</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_sub_header_1">Mail Accounts</string>
    <string name="nav_sub_item_1">dv15lgr@cs.umu.se</string>
    <string name="nav_sub_item_2">genfys@gmail.com</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>
